2015-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/source-file.c: Fix compilation

2015-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/dest-application.c, xfer-src/source-file.c: Add files

2015-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* Implement DAR (Direct Access Recovery)

2015-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (verify_unlocked): Reload the state and
	  use eject_unload

2015-06-15  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Take another tar of ./pg_tblspc by
	  keeping the symlink.

2015-06-10  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: On recovery, set initial window to (0, -1)
	* installcheck/Installcheck/Mock.pm: Set verbose to YES

2015-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Set initial window correctly on recovery

2015-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amssl.pl: SSL_VERIFY_NONE is not defined on older
	  IO::Socket::SSL

2015-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.h (struct tcp_conn): Remove meth.
	* common-src/ssl-security.c: Do not use temporary variable for the
	  method.

2015-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: s/check_auth/check_host_setting/g, check
	  maxdumps is the same for all DLEs of a host
	* common-src/ammessage.c: Add message 2800232

2015-06-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb5-security.c (krb5_tcpm_recv_token): Remove the fd
	  argument.

2015-06-08  Jean-Louis Martineau <martineau@zmanda.com>
	* man/Makefile.am: Typo.

2015-06-08  Jean-Louis Martineau <martineau@zmanda.com>
	Add ssl auth.
	* config/amanda/amanda_configure.m4: Load AMANDA_SSL_SECURITY
	* config/amanda/ssl-security.m4 (AMANDA_SSL_SECURITY): Add
	  --with-ssl-security
	* amandad-src/amandad.c: Add code to support ssl auth,